examples/pod-used-pvc.yaml
apiVersion: v1 
kind: Pod
metadata: 
  name: pod-uses-pvc
  namespace: ckad-1312
spec:
  volumes:
    - name: pvst
      persistentVolumeClaim:
        claimName: pvc
  containers:
    - name: pod-use-pvc
      image: nginx
      volumeMounts:
        - mountPath: "/webdata"
          name: pvst
