examples/probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pathprob
  namespace: ckad-ns3
spec:
  containers:
  - name: nginx
    image: nginx
    readinessProbe:
      exec:
        command: ["ls","/"]
      initialDelaySeconds: 60
      periodSeconds: 60
